updated plus sign bug being too small to click

--- a/src/sass/components/_accordion.scss
+++ b/src/sass/components/_accordion.scss
@@ -54,8 +54,8 @@
     max-height: 20rem;
   }
   .plus {
-    width: 18px;
-    height: 18px;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     position: relative;
     transition: transform 250ms ease-in-out;
