--- a/style.css
+++ b/style.css
@@ -253,8 +253,8 @@ select {
   max-height: 20rem;
 }
 .accordion .plus {
-  width: 18px;
-  height: 18px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   position: relative;
   transition: transform 250ms ease-in-out;
